prod_snapshot_2015-09-24_1030/objects/RequestsIssues__c.object
<CustomObject>
    <description>Object to track requests, descriptions, files and time frames.</description>
    <fields>
        <fullName>Admin_Comments__c</fullName>
        <inlineHelpText>Comment Section For Admin After Completion</inlineHelpText>
        <label>Admin Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DC_Area_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>(If Account Executive)</inlineHelpText>
        <label>DC Area Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Systems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DC_Position__c</fullName>
        <label>DC Position</label>
        <picklist>
            <picklistValues>
                <fullName>Area Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Executive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Daily_Frequency__c</fullName>
        <label>Daily Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Every Weekday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Every Day</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <inlineHelpText>Date Task Is Completed</inlineHelpText>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ETA__c</fullName>
        <inlineHelpText>Time of Estimated Completion</inlineHelpText>
        <label>ETA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Example_in_SalesForce__c</fullName>
        <description>SalesForce link to an example of where the error is occuring</description>
        <inlineHelpText>SalesForce link to an example of where the error is occuring</inlineHelpText>
        <label>Example in SalesForce</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GL_Manager__c</fullName>
        <label>GO Manager</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <formula>CASE( TEXT(Team_Category__c), &quot;DC Marketing&quot;, &quot;A&quot;, &quot;DC Operations&quot;, &quot;B&quot;, &quot;DC Sales&quot;, &quot;C&quot;, &quot;GL Accounts&quot;, &quot;D&quot;, &quot;GL Lead Gen&quot;, &quot;E&quot;, &quot;GL Operations&quot;, &quot;F&quot;, &quot;GL Sales&quot;, &quot;G&quot;, &quot;GDMS Multiple&quot;, &quot;H&quot;,&quot;Z&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <defaultValue>&quot;Enter The Following Information Where Applicable&quot; &amp; BR() &amp; BR() &amp;
&quot;New (Applications Needed, Full Name, Email, Report To, Replaces/Same As, Title)&quot;&amp; BR() &amp; BR() &amp;
&quot;Turn Off(Full Name, Report To, Applications To Turn Off, Replaced By)&quot; &amp; BR() &amp; BR() &amp;
&quot;Date To Activate/Deactivate&quot;&amp; BR() &amp; BR() &amp;
&quot;Records To Transfer If Needed (such as Accounts, Opps, Leads, Etc)&quot;&amp; BR() &amp; BR() &amp;
&quot;Copy and Paste Email Text If Easier, But Be Sure To Include All Information&quot;</defaultValue>
        <label>Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JumpTo_Req__c</fullName>
        <formula>HYPERLINK(&quot;https://na10.salesforce.com/&quot;&amp; Id ,&quot;JumpTo&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JumpTo Req</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Comment__c</fullName>
        <label>Last Comment</label>
        <summarizedField>Comments__c.CreatedDate</summarizedField>
        <summaryForeignKey>Comments__c.Parent_Record__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Long_Description__c</fullName>
        <label>Long Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Manager_Comments__c</fullName>
        <label>Manager Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MarketLocation__c</fullName>
        <label>Market/Location</label>
        <picklist>
            <picklistValues>
                <fullName>Appleton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asbury Park, NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asheville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlanta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Binghamton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brevard/Space Coast, FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buffalo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burlington</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Jersey, NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Ohio, MNCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Wisconsin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cincinnati</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleveland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Des Moines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detroit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fort Collins, CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ft Myers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grand Rapids</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green Bay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greensboro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greenville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indianapolis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jackson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jacksonville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jersey Shore, NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knoxville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lafayette, IN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monthly_On_Day__c</fullName>
        <label>Monthly On Day</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name_Of_Campaigns__c</fullName>
        <inlineHelpText>Recorded By Admin After Completion</inlineHelpText>
        <label>Name Of Campaign/s</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Of_Lists__c</fullName>
        <inlineHelpText>Recorded By Admin After Completion</inlineHelpText>
        <label>Name Of List/s</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Of_Skills__c</fullName>
        <label>Name Of Skill/s</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Supervisor__c</fullName>
        <label>Owner Supervisor</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Parent_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Project</label>
        <referenceTo>RequestsIssues__c</referenceTo>
        <relationshipName>ChildProjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Problem_Category__c</fullName>
        <label>Problem Category</label>
        <picklist>
            <picklistValues>
                <fullName>Request New User Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Only InsideSales Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Only Tinderbox Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Only Radius Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alter User/Group Permissions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alter Email Notification Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create/Alter Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bug/Issue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ranking__c</fullName>
        <inlineHelpText>1 through 9, 1 being the most important.</inlineHelpText>
        <label>Ranking</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Report_Frequency__c</fullName>
        <description>Frequency Schedule of the report being sent out.</description>
        <inlineHelpText>Frequency Schedule of the report being sent out.</inlineHelpText>
        <label>Report Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Report_Name__c</fullName>
        <description>Name of The Report Being Sent Out</description>
        <inlineHelpText>Name of The Report Being Sent Out</inlineHelpText>
        <label>Report Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_URL__c</fullName>
        <description>URL of the report being sent out</description>
        <inlineHelpText>URL of the report being sent out</inlineHelpText>
        <label>Report URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Request_Category__c</fullName>
        <label>Request Category</label>
        <picklist>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <inlineHelpText>Config = Basic Change To Current Process Or Tool (New Field Or Picklist Options)
System = New Process Or Tool (Report, Workflow, Layout)
Project = For Directors Only - Major Work Or Involving More Than One System</inlineHelpText>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Config</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Project</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <inlineHelpText>Name of Person Requesting Action (Not Necessarily the one creating the record)</inlineHelpText>
        <label>Requestor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submit_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Date of Official/Original Request.</description>
        <inlineHelpText>Date of Official/Original Request.</inlineHelpText>
        <label>Submit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Originator.  Whose idea was this?</inlineHelpText>
        <label>Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Systems_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System_s_Involved__c</fullName>
        <inlineHelpText>Enter the System (Five9, Echo-Sign, Salesforce, etc.) that are involved.</inlineHelpText>
        <label>System/s Involved</label>
        <picklist>
            <picklistValues>
                <fullName>Salesforce - GannettLocal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce - DealChicken</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tinderbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EchoSign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radius Intelligence</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Team_Category__c</fullName>
        <label>Team Category</label>
        <picklist>
            <picklistValues>
                <fullName>DC Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL Lead Gen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GDMS Multiple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_Estimate__c</fullName>
        <label>Time Estimate</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Short_Description__c</fullName>
        <inlineHelpText>Something that identifies the project in a short title, limit 100 characters.</inlineHelpText>
        <label>Title/Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfer_From_Txt__c</fullName>
        <label>Transfer From</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfer_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transfer From</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Systems1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transfer_Object__c</fullName>
        <label>Transfer Object</label>
        <picklist>
            <picklistValues>
                <fullName>Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Opps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacts</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Transfer_To_Txt__c</fullName>
        <label>Transfer To</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfer_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transfer To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Systems2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UserAction_Date__c</fullName>
        <label>User Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UserEmail__c</fullName>
        <label>User Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>User_Action__c</fullName>
        <label>User Action</label>
        <picklist>
            <picklistValues>
                <fullName>New Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel &amp; Replace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modify Account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Setup_Instructions__c</fullName>
        <formula>HYPERLINK(&quot;https://c.na10.content.force.com/servlet/servlet.FileDownload?file=015F0000001aenh&quot;, &quot;Admin Instructions&quot;,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Setup Instructions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Title__c</fullName>
        <label>User Title</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Users_Manager__c</fullName>
        <label>User&apos;s Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WaitingOn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If the Systems Request is in status of &quot;Waiting On Business&quot;, This field is primary person in the business the Systems Request is Waiting On</description>
        <inlineHelpText>If the Systems Request is in status of &quot;Waiting On Business&quot;, This field is primary person in the business the Systems Request is Waiting On</inlineHelpText>
        <label>Waiting On Response From</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Systems_User_Waiting_On</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Weekly_Frequency__c</fullName>
        <label>Weekly Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Systems</label>
    <listViews>
        <fullName>All_Open_Sys_Requests</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>Admin_Comments__c</columns>
        <columns>Status__c</columns>
        <columns>Request_Category__c</columns>
        <columns>Title_Short_Description__c</columns>
        <columns>Submit_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Team_Category__c</columns>
        <columns>Submitter__c</columns>
        <columns>Ranking__c</columns>
        <columns>Last_Comment__c</columns>
        <columns>Requestor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled,Ongoing</value>
        </filters>
        <label>All Open Sys Requests</label>
    </listViews>
    <listViews>
        <fullName>Change_Requests</fullName>
        <columns>NAME</columns>
        <columns>Title_Short_Description__c</columns>
        <columns>Admin_Comments__c</columns>
        <columns>Team_Category__c</columns>
        <columns>Submitter__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Submit_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <filters>
            <field>Request_Category__c</field>
            <operation>equals</operation>
            <value>Change Request</value>
        </filters>
        <label>2. Change Requests</label>
    </listViews>
    <listViews>
        <fullName>Open_Sales_Requests</fullName>
        <columns>Submitter__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>Title_Short_Description__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team_Category__c</field>
            <operation>contains</operation>
            <value>sales</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <label>Open Sales Requests</label>
    </listViews>
    <listViews>
        <fullName>Open_Salesforce_Requests_AS_Review</fullName>
        <columns>NAME</columns>
        <columns>Submit_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Request_Category__c</columns>
        <columns>Admin_Comments__c</columns>
        <columns>Title_Short_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled,Ongoing</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>notContain</operation>
            <value>Phillip Pratt</value>
        </filters>
        <label>Open Salesforce Requests - AS Review</label>
    </listViews>
    <listViews>
        <fullName>SR_DC</fullName>
        <columns>Request_Category__c</columns>
        <columns>NAME</columns>
        <columns>Title_Short_Description__c</columns>
        <columns>Status__c</columns>
        <columns>Admin_Comments__c</columns>
        <columns>Submitter__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>WaitingOn__c</columns>
        <columns>Submit_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <filters>
            <field>Team_Category__c</field>
            <operation>equals</operation>
            <value>DC Marketing,DC Operations,DC Sales</value>
        </filters>
        <label>SR - DC</label>
    </listViews>
    <listViews>
        <fullName>SR_GDMS_Multiple</fullName>
        <columns>Request_Category__c</columns>
        <columns>NAME</columns>
        <columns>Title_Short_Description__c</columns>
        <columns>Status__c</columns>
        <columns>Admin_Comments__c</columns>
        <columns>Submitter__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>WaitingOn__c</columns>
        <columns>Submit_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <filters>
            <field>Team_Category__c</field>
            <operation>equals</operation>
            <value>GDMS Multiple</value>
        </filters>
        <label>SR - GDMS Multiple</label>
    </listViews>
    <listViews>
        <fullName>SR_GL_Accounts</fullName>
        <columns>Request_Category__c</columns>
        <columns>NAME</columns>
        <columns>Title_Short_Description__c</columns>
        <columns>Status__c</columns>
        <columns>Admin_Comments__c</columns>
        <columns>Submitter__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>WaitingOn__c</columns>
        <columns>Submit_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <filters>
            <field>Team_Category__c</field>
            <operation>equals</operation>
            <value>GL Accounts</value>
        </filters>
        <label>SR - GL Accounts</label>
    </listViews>
    <listViews>
        <fullName>SR_GL_Lead_Gen</fullName>
        <columns>Request_Category__c</columns>
        <columns>NAME</columns>
        <columns>Title_Short_Description__c</columns>
        <columns>Status__c</columns>
        <columns>Admin_Comments__c</columns>
        <columns>Submitter__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>WaitingOn__c</columns>
        <columns>Submit_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <filters>
            <field>Team_Category__c</field>
            <operation>equals</operation>
            <value>GL Lead Gen</value>
        </filters>
        <label>SR - GL Lead Gen</label>
    </listViews>
    <listViews>
        <fullName>SR_GL_Operations</fullName>
        <columns>Request_Category__c</columns>
        <columns>NAME</columns>
        <columns>Title_Short_Description__c</columns>
        <columns>Status__c</columns>
        <columns>Admin_Comments__c</columns>
        <columns>Submitter__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>WaitingOn__c</columns>
        <columns>Submit_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <filters>
            <field>Team_Category__c</field>
            <operation>equals</operation>
            <value>GL Operations</value>
        </filters>
        <label>SR - GL Operations</label>
    </listViews>
    <listViews>
        <fullName>SR_GL_Sales</fullName>
        <columns>Request_Category__c</columns>
        <columns>NAME</columns>
        <columns>Title_Short_Description__c</columns>
        <columns>Status__c</columns>
        <columns>Admin_Comments__c</columns>
        <columns>Submitter__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>WaitingOn__c</columns>
        <columns>Submit_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <filters>
            <field>Team_Category__c</field>
            <operation>equals</operation>
            <value>GL Sales</value>
        </filters>
        <label>SR - GL Sales</label>
    </listViews>
</CustomObject>